--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -78,4 +78,8 @@
     <string name="hbm_mode_summary">High Brightness Mode allows the display panel brightness to go above the maximum stock value. Which helps in improving visibility in direct sunlight</string>
     <string name="hbm_enable_summary_not_supported">HBM is not currently supported by the kernel</string>
 
+    <!-- Raise to wake gesture-->
+    <string name="raise_to_wake_title">Wake up</string>
+    <string name="raise_to_wake_summary">Wake up the device instead of pulsing notifications</string>
+
 </resources>
